--- a/Evan_Forms.html
+++ b/Evan_Forms.html
@@ -15,6 +15,7 @@
 <ul class="tabs">
     <li data-tab-target="#main" class="active tab">Main Forms</li>
     <li data-tab-target="#mods" class="tab">Mods</li>
+    <li data-tab-target="#vhsVideos" class="tab">VHS Videos</li>
     <li data-tab-target="#experimentation" class="tab">Mod Testing</li>
   </ul>
   
@@ -32,6 +33,31 @@
   <!-- experimentation -->
     <div id="experimentation" data-tab-content> 
 	  <h1 style="text-align:center" class="BorderRound"  >Mod Testing</h1>
+	</div>
+	
+  <!-- Old VHS videos Look "vhs_Videos\"-->
+	
+	<div id="vhsVideos" data-tab-content> 
+	  <h1 style="text-align:center" class="BorderRound"  >KSP Footage that i put some vhs effects on!</h1>
+	  
+	  <!-- video 2 start -->
+	  <video class="BorderRoundCenter" controls>
+	  <source  src="vhs_Videos\Sequence 02.mp4" type="video/mp4">
+	  Your browser does not support the video tag.
+	  </video>
+	  <h1 style="text-align:center" >A Station Crashing into another station!</h1>
+	  <!-- video 2 end -->
+	  
+	  <!-- video 1 start -->
+	  <video class="BorderRoundCenter" controls>
+	  <source  src="vhs_Videos\Sequence 01.mp4" type="video/mp4">
+	  Your browser does not support the video tag.
+	  </video>
+	  <h1 style="text-align:center" >Just a Station Orbiting around Kerbin</h1>
+	  <!-- video 1 end -->
+	  
+	  <h1 style="text-align:center" class="BorderRound"  >nothing at the bottom</h1>
+	  
 	</div>
 	
   </div>
