--- a/Evan_Forms.html
+++ b/Evan_Forms.html
@@ -48,6 +48,8 @@
 	  <h1 style="text-align:center" >A Station Crashing into another station!</h1>
 	  <!-- video 2 end -->
 	  
+	  <div class="LineOffRound"></div>
+	  
 	  <!-- video 1 start -->
 	  <video class="BorderRoundCenter" controls>
 	  <source  src="vhs_Videos\Sequence 01.mp4" type="video/mp4">
@@ -55,6 +57,8 @@
 	  </video>
 	  <h1 style="text-align:center" >Just a Station Orbiting around Kerbin</h1>
 	  <!-- video 1 end -->
+	  
+	  <div class="LineOffRound"></div>
 	  
 	  <h1 style="text-align:center" class="BorderRound"  >nothing at the bottom</h1>
 	  
