--- a/Evan_Forms.html
+++ b/Evan_Forms.html
@@ -22,12 +22,41 @@
   <div class="tab-content">
   <!-- Main -->
 	<div id="main" data-tab-content class="active">
-      <h1 style="text-align:center" class="BorderRound"  >Home</h1>
+      <h1 style="text-align:center" class="BorderRound"  >Evan Forms</h1>
       
     </div>
   <!-- Mods -->
 	<div id="mods" data-tab-content>
-	  <h1 style="text-align:center" class="BorderRound"  >Mods that I play with!</h1>
+	  <h1 style="text-align:center" class="BorderRound"  >Mods that I play with</h1>
+	  
+	  <br>
+	  <div class="LineOffRound"></div>
+	  <h2 style="text-align:center">Mod Folders</h2>
+	  <div class="LineOffRound"></div>
+	  
+	  <br>
+	  <h2 style="text-align:center">000_TexturesUnlimited</h2>
+	  <h2 style="text-align:center">B9PartSwitch</h2>
+	  <h2 style="text-align:center">CameraTools</h2>
+	  <h2 style="text-align:center">KS3P</h2>
+	  <h2 style="text-align:center">MagicSmokeIndustries</h2>
+	  <h2 style="text-align:center">NearFutureProps</h2>
+	  <h2 style="text-align:center">RealPlume</h2>
+	  <h2 style="text-align:center">RealPlume-Stock</h2>
+	  <h2 style="text-align:center">SmokeScreen</h2>
+	  <h2 style="text-align:center">StationPartsExpansionRedus</h2>
+	  <h2 style="text-align:center">Trajectories</h2>
+	  <h2 style="text-align:center">TweakScale</h2>
+	  <br>
+	  <div class="LineOffRound"></div>
+	  <h2 style="text-align:center">.dll files</h2>
+	  <div class="LineOffRound"></div>
+	  <br>
+	  <h2 style="text-align:center">999_Scale_Redist</h2>
+	  <h2 style="text-align:center">FShangerExtender</h2>
+	  <h2 style="text-align:center">ModuleManger.2.8.1</h2>
+	  <br>
+	  <div class="LineOffRound"></div>
 	  
 	</div>
   <!-- experimentation -->
@@ -40,23 +69,43 @@
 	<div id="vhsVideos" data-tab-content> 
 	  <h1 style="text-align:center" class="BorderRound"  >KSP Footage that i put some vhs effects on!</h1>
 	  
-	  <!-- video 2 start -->
+	  <div class="LineOffRound"></div>
+	  
+	  
+	  <!-- video 3 start -->
 	  <video class="BorderRoundCenter" controls>
-	  <source  src="vhs_Videos\Sequence 02.mp4" type="video/mp4">
+	  <source  src="vhs_Videos\Sequence 3.mp4"type="video/mp4">
+	  Your browser does not support the video tag.
+	  </video>
+	  <h1 style="text-align:center" >Small ship impacting a big Station</h1>
+	  <!-- video 3 end -->
+	  
+	  
+	  <div class="LineOffRound"></div>
+	  
+	  
+	  <!-- video 2 start -->
+	  <video  width="1920" height="1080"  class="BorderRoundCenter" controls>
+	  <source  src="vhs_Videos\Sequence 2.mp4" type="video/mp4">
 	  Your browser does not support the video tag.
 	  </video>
 	  <h1 style="text-align:center" >A Station Crashing into another station!</h1>
 	  <!-- video 2 end -->
 	  
+	  
 	  <div class="LineOffRound"></div>
 	  
+	   
 	  <!-- video 1 start -->
-	  <video class="BorderRoundCenter" controls>
-	  <source  src="vhs_Videos\Sequence 01.mp4" type="video/mp4">
+	  <video  width="1920" height="1080" class="BorderRoundCenter" controls>
+	  <source src="vhs_Videos\Sequence 1.mp4"type="video/mp4">
 	  Your browser does not support the video tag.
 	  </video>
 	  <h1 style="text-align:center" >Just a Station Orbiting around Kerbin</h1>
 	  <!-- video 1 end -->
+	  
+	  
+	  
 	  
 	  <div class="LineOffRound"></div>
 	  
