--- a/Evan_Forms.html
+++ b/Evan_Forms.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="FormScript.js" defer></script>
   <link href="FormStyle.css" rel="stylesheet">
-  <title>Evan's KSP World - Forms</title>
+  <title>Evan's KSP World -- Forms</title>
 </head>
 <body>
 <ul class="tabs">
