--- a/Evan_forums.html
+++ b/Evan_forums.html
@@ -1,17 +1,19 @@
 
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <link rel="icon" href="./logo.png" type="image/png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="FormScript.js" defer></script>
-  <link href="FormStyle.css" rel="stylesheet">
-  <title>Evan's KSP World - Forms</title>
+  <script src="ForumScript.js" defer></script>
+  <link href="ForumStyle.css" rel="stylesheet">
+  <title>Evan's KSP World - Forums</title>
 </head>
 <body>
+
+<input class="BorderRoundCenterButton" type="button" value="Leave forums" onclick="HomePage();" />
+
 <ul class="tabs">
     <li data-tab-target="#main" class="active tab">Main Forms</li>
     <li data-tab-target="#mods" class="tab">Mods</li>
