--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li data-tab-target="#home" class="active tab">Home</li>
     <li data-tab-target="#screenshots" class="tab">Screenshots</li>
 	<li data-tab-target="#videos" class="tab">Videos</li>
-	<li data-tab-target="#forms" class="tab">Evan Forms</li>
+	<li data-tab-target="#forums" class="tab">Evan forums</li>
     <li data-tab-target="#about" class="tab">About</li>
     <li data-tab-target="#test" class="tab">Wiki</li>
   </ul>
@@ -57,11 +57,11 @@
 	  </div>
     </div>
 	
-	<div id="forms" data-tab-content>
-	  <h1 style="text-align:center" class="BorderRound"  >To Enter The Evan Forms Click The Button</h1>
+	<div id="forums" data-tab-content>
+	  <h1 style="text-align:center" class="BorderRound"  >To Enter The Evan forums Click The Button</h1>
 	  
 	  <br>
-	  <input class="BorderRoundCenter" type="button" id="" value="Submit" onclick="GotoForms();" />
+	  <input class="BorderRoundCenterButton" type="button" id="" value="Enter forums" onclick="GotoForms();" />
 	  
 	</div>
 	
