--- a/Evan_forums.html
+++ b/Evan_forums.html
@@ -15,7 +15,7 @@
 <input class="BorderRoundCenterButton" type="button" value="Leave forums" onclick="HomePage();" />
 
 <ul class="tabs">
-    <li data-tab-target="#main" class="active tab">Main Forms</li>
+    <li data-tab-target="#main" class="active tab">Main Forums</li>
     <li data-tab-target="#mods" class="tab">Mods</li>
     <li data-tab-target="#vhsVideos" class="tab">VHS Videos</li>
     <li data-tab-target="#experimentation" class="tab">Mod Testing</li>
@@ -24,7 +24,7 @@
   <div class="tab-content">
   <!-- Main -->
 	<div id="main" data-tab-content class="active">
-      <h1 style="text-align:center" class="BorderRound"  >Evan Forms</h1>
+      <h1 style="text-align:center" class="BorderRound"  >Evan Forums</h1>
       
     </div>
   <!-- Mods -->
