--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 	
 	<div id="forums" data-tab-content>
-	  <h1 style="text-align:center" class="BorderRound"  >To Enter The Evan forums Click The Button</h1>
+	  <h1 style="text-align:center" class="BorderRound"  >To enter the Evan forums click the Button</h1>
 	  
 	  <br>
 	  <input class="BorderRoundCenterButton" type="button" id="" value="Enter forums" onclick="GotoForms();" />
